<resources>

    <string name="app_name">bigappleui组件库</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    
    <string name="tab_btn_text0_wzy">问作业</string>
    <string name="tab_btn_text1_qd">抢答</string>
    <string name="tab_btn_text2_dy">答疑</string>
    <string name="tab_btn_text3_lt">聊天</string>
    <string name="tab_btn_text4_wd">我的</string>

</resources>